--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
   </head>
   <body>
     <article>
-      <h1>TWIBBON GENERATOR</h1>
+      <h1>PKKMB FKEP 2024</h1>
 
-      <p>Ini adalah situs web tempat Anda dapat menambahkan foto ke bingkai.</p>
+      <p>Ini adalah situs web generate twibbon PKKMB FKEP UNHAS 2024</p>
 
       <div class="wrapper">
         <canvas id="preview" width="500" height="500" title="Preview"></canvas><br />
@@ -102,7 +102,7 @@
         <img src="./assets/placeholder.png" alt="" width="1" id="placeholder" hidden />
       </div>
 
-      <p>Fitur: Tidak perlu keterampilan pengeditan tambahan. Dibutuhkan kurang dari dua menit untuk melakukannya dan bebas biaya. Ini sudah tersedia, ramah pengguna dan tersedia untuk semua.</p>
+      <p>Ket : Sesuaiakan posisi foto dengan mengklik tombol panah</p>
 
       <script type="text/javascript">
         const input = document.getElementById('input-file');
