--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=0.70;" />
     <title>Twibbon App</title>
     <meta property="og:title" content="Twibbon App" />
-    <meta property="og:image" content="https://pui-real.pages.dev/img/og.png" />
+    <meta property="og:image" content="https://pui-real.pages.dev/img/logo.png" />
     <meta property="og:description" content="Ini adalah situs web tempat Anda dapat menambahkan foto ke bingkai." />
     <meta name="msapplication-TileColor" content="#af0a1a" />
     <meta name="theme-color" content="#ffffff" />
-    <link rel="shortcut icon" href="img/fav-16.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="img/fav-32.png" />
+    <link rel="shortcut icon" href="img/logo.png" />
+    <!-- <link rel="icon" type="image/png" sizes="32x32" href="img/fav-32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="img/fav-16.png" />
     <link rel="apple-touch-icon" href="img/fav-57.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="img/fav-114.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="img/fav-72.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="img/fav-144.png" />
+    <link rel="apple-touch-icon" sizes="144x144" href="img/fav-144.png" /> -->
     <link rel="manifest" href="pwa-manifest.json" />
     <link rel="stylesheet" href="css/style.css" />
 
