--- a/index.html
+++ b/index.html
@@ -4,19 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=0.70;" />
-    <title>Twibbon App</title>
+    <title>Twibbon PKKMB</title>
     <meta property="og:title" content="Twibbon App" />
     <meta property="og:image" content="https://pui-real.pages.dev/img/logo.png" />
     <meta property="og:description" content="Ini adalah situs web tempat Anda dapat menambahkan foto ke bingkai." />
     <meta name="msapplication-TileColor" content="#af0a1a" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="shortcut icon" href="img/logo.png" />
-    <!-- <link rel="icon" type="image/png" sizes="32x32" href="img/fav-32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="img/fav-16.png" />
-    <link rel="apple-touch-icon" href="img/fav-57.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="img/fav-114.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="img/fav-72.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="img/fav-144.png" /> -->
     <link rel="manifest" href="pwa-manifest.json" />
     <link rel="stylesheet" href="css/style.css" />
 
@@ -82,7 +76,7 @@
   </head>
   <body>
     <article>
-      <h1>PKKMB FKEP 2024</h1>
+      <h1>TWIBBON GENERATE</h1>
 
       <p>Ini adalah situs web generate twibbon PKKMB FKEP UNHAS 2024</p>
 
