--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=0.70;" />
     <title>Twibbon PKKMB</title>
-    <meta property="og:title" content="Twibbon App" />
+    <meta property="og:title" content="Twibbon PKKMB" />
     <meta property="og:image" content="https://pui-real.pages.dev/img/logo.png" />
-    <meta property="og:description" content="Ini adalah situs web tempat Anda dapat menambahkan foto ke bingkai." />
+    <meta property="og:description" content="Ini adalah situs web generate twibbon PKKMB FKEP UNHAS 2024." />
     <meta name="msapplication-TileColor" content="#af0a1a" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="shortcut icon" href="img/logo.png" />
